# paper

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AI_DB_PLAN.md  Dockerfile  Makefile  README.md  TODO.md  demo_extraction.py  docker-compose.yml  final_test.py  gui_test.py  gui_test_result.json  main.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  run_dbpia_extraction.py  simulate_working_extraction.py  start_frontend.py  test_api_response.py  test_dbpia_extraction.py  test_frontend.py  test_frontend_fixed.py  test_gui.py  test_pdf_preview.py  tsconfig.json  바
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
app/: config.py  dependencies.py  exceptions.py  models.py  schemas.py  server.py
app/core/: __init__.py  logging.py
app/repositories/: __init__.py  base.py  chunk_repository.py  paper_repository.py
app/services/: __init__.py  paper_service.py  search_service.py
crawler/: dbpia_crawler.py
dbpia_downloads/: complete_extraction_results.json
frontend/: README.md  index.html  script.js  server.py  styles.css
public/: index.html
scripts/: add_hnsw_index.py  add_local_pdfs.py  crawl_and_save_pdf.py  etl.py  hnsw_parameter_tuning.py  run_tests.py
tests/: conftest.py  e2e.spec.ts  test_api.py
tests/integration/: test_api_endpoints.py
tests/unit/: test_config.py  test_exceptions.py  test_models.py  test_schemas.py
